# IUM-final

./: CMakeLists.txt  README.md
img/: WM.xpm
src/: Monitor.h  RackUnits.h  WiiMIDI.h  WiiMIDI_GUI.h  WindowTypes.h
src/GUI/: Animation.cpp  Button.cpp  CheckBox.cpp  ContextMenu.cpp  DropdownMenu.cpp  MenuPanel.cpp  RadioButton.cpp  Scrollbar.cpp  TabsPanel.cpp
src/Interface/: Interface.cpp  WiiMIDI.cpp  WiimoteThread.cpp
src/Monitor/: Coordinate.cpp  Monitor.cpp
src/RackUnits/: Drone.cpp  MasterVolume.cpp  Mute.cpp  PitchController.cpp  Rack.cpp  RackUnit.cpp
src/WindowTypes/: CtrlSettings.cpp  ErrorMessage.cpp  GhostWindow.cpp  MidiSettings.cpp  MonitorWindow.cpp  RackManager.cpp  Window.cpp
